<resources>
    <string name="app_name">Book lend</string>
    <string name="User_name">User name</string>
    <string name="Full_name">Full name</string>
    <string name="School">School</string>
    <string name="Class">Class</string>
    <string name="Year_of_birth">Year of birth</string>
    <string name="Gender">Gender</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Sign_in">Sign in</string>
    <string name="Forget_password">Forget your password?</string>
    <string name="Create_new_account">Create new account</string>
</resources>