<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/item_rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:background="@drawable/login_img"
            android:contentDescription="Login img"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="41sp"
            style="@style/app_name"
            tools:ignore="TextSizeCheck" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="alex123@gmail.com" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_email"
            android:layout_alignStart="@id/et_email"
            android:layout_marginTop="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:autofillHints="Alex1234!" />
        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/et_password"
            android:layout_below="@id/et_password"
            android:layout_marginTop="5dp"
            android:text="@string/Sign_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/bt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_alignStart="@id/et_email"
            android:layout_marginTop="230dp"
            android:background="@android:color/transparent"
            android:text="@string/Forget_password"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#00838F"
            android:textSize="10sp"
            tools:ignore="SmallSp,TextSizeCheck"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/bt_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_forget_password"
            android:layout_alignStart="@id/et_email"
            android:layout_marginTop="3dp"
            android:text="@string/Create_new_account"
            android:textSize="10sp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#00838F"
            android:background="@android:color/transparent"
            tools:ignore="SmallSp,TextSizeCheck,VisualLintBounds"
            android:onClick="onClick"/>
    </RelativeLayout>

</ScrollView>
